fixed visible cursor on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ footer {
     position: absolute;
     transition-timing-function: ease-out;
     animation: cursorAnim .5s infinite alternate;
+    left: -200px;
   }
   
   .cursor::after{
